# rest-flask-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .env  .pre-commit-config.yaml  Pipfile  flask_celery.py  manage.py  pyproject.toml  setup.cfg  wsgi.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: __init__.py  base.py  config.py  database.py  errors.py  extensions.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/celery/: __init__.py  tasks.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/controllers/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/controllers/api/: __init__.py  status.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/models/: __init__.py  base.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  base.py  database.py  errors.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/controllers/api/: __init__.py  hook.py  status.py
